<resources>
    <string name="app_name">TodoList</string>
    <string name="btn_add_todo">할 일 추가하기</string>

    <!-- AddTodoActivity text-->
    <string name="title">제목</string>
    <string name="hint_title">해야 할 일을 입력해주세요.</string>
    <string name="importance">중요도</string>
    <string name="importance_low">낮음</string>
    <string name="importance_middle">중간</string>
    <string name="importance_high">높음</string>
    <string name="completion">완료</string>
    <string name="update">수정</string>

    <string name="alert_title">할 일 삭제</string>
    <string name="alert_message">정말 삭제하시겠습니까?</string>
    <string name="alert_yes">네</string>
    <string name="alert_no">취소</string>
</resources>