<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoUpdateActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>

    <!--EditText는 사용자가 텍스트를 입력할 수 있는 상자 형태의 UI 요소-->
    <EditText
        android:id="@+id/up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hint_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importance"
        app:layout_constraintTop_toBottomOf="@+id/up_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>

    <RadioGroup
        android:id="@+id/up_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_importance"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/up_btn_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_low"/>

        <RadioButton
            android:id="@+id/up_btn_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_middle"/>

        <RadioButton
            android:id="@+id/up_btn_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_high"/>
    </RadioGroup>

    <Button
        android:id="@+id/up_btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>